@@ -1,3 +1,6 @@
+05/05/2010
+- bugfix on {insert} to cache parameter
+
 01/05/2010
 - bugfix on handling of variable method names at object chaning
 
